--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx4G
 minecraft_version=1.20.1
 
 archives_base_name=CustomCursor-comm
-mod_version=1.0-SNAPSHOT
+mod_version=1.1
 maven_group=io.github.jumperonjava
 
 architectury_version=9.1.12
