--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -20,6 +20,9 @@ repositories{
         url = "https://api.modrinth.com/maven"
     }
 }
+loom{
+
+}
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
