--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,17 @@
 org.gradle.jvmargs=-Xmx4G
 
-minecraft_version=1.20.1
+minecraft_version=1.20.4
+yarn_mappings=1.20.4+build.1
+loader_version=0.15.7
+
 
 archives_base_name=CustomCursor-comm
-mod_version=1.2.0
+mod_version=1.2.1
 maven_group=io.github.jumperonjava
 
 architectury_version=9.1.12
 
-fabric_loader_version=0.14.22
-fabric_api_version=0.89.3+1.20.1
+fabric_loader_version=0.15.1
+fabric_api_version=0.96.3+1.20.4
 
-forge_version=1.20.1-47.2.1
+forge_version=1.20.4-49.0.30
